--- a/style.css
+++ b/style.css
@@ -9,3 +9,11 @@
 .catagories img {
     width: 100px;
 }
+
+.buy-now-btn {
+    background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    padding: 9px 25px;
+}
